--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
   "name": "saqyaapp-vite",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "firebase": "^10.10.0",
+    "cors": "^2.8.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-otp-input": "^3.1.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.1.0",
-    "vite": "^4.5.0"
+    "@types/prop-types": "^15.7.15",
+    "@vitejs/plugin-react": "^4.7.0",
+    "vite": "^5.1.0"
   }
 }
