--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "cors": "^2.8.5",
+    "firebase": "^10.7.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-otp-input": "^3.1.1"
-        "react-router-dom": "^7.7.1",
+    "react-otp-input": "^3.1.1",
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
     "@types/prop-types": "^15.7.15",
