--- a/package.json
+++ b/package.json
@@ -1,24 +1,14 @@
-{
-  "name": "saqyaapp-vite",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+import { defineConfig } from 'vite'
+import react from '@vitejs/plugin-react'
+
+export default defineConfig({
+  plugins: [react()],
+  resolve: {
+    alias: {
+      'uuid': 'uuid/dist/esm-browser/index.js'
+    }
   },
-  "dependencies": {
-    "axios": "^1.11.0",
-    "cors": "^2.8.5",
-    "firebase": "^10.7.2",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-otp-input": "^3.1.1",
-    "react-router-dom": "^6.14.2"
-  },
-  "devDependencies": {
-    "@types/prop-types": "^15.7.15",
-    "@vitejs/plugin-react": "^4.7.0",
-    "vite": "^5.1.0"
+  optimizeDeps: {
+    include: ['uuid']
   }
-}
+})
