--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  {
+
+  "type": "module",
   "dependencies": {
-      "uuid": "^9.0.1",
+    "uuid": "^9.0.1"
+  }
+  }
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "firebase": "^10.7.2",
