--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
   "name": "saqyaapp-vite",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  {
-
-  "type": "module",
   "dependencies": {
-    "uuid": "^9.0.1"
-  }
-  }
     "axios": "^1.11.0",
     "cors": "^2.8.5",
     "firebase": "^10.7.2",
@@ -20,7 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-otp-input": "^3.1.1",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/prop-types": "^15.7.15",
